--- a/assets/css/main/header.css
+++ b/assets/css/main/header.css
@@ -1,4 +1,4 @@
-@import url(_variable.css);
+@import url(https://haneen-khairi.github.io/North-Immigration-WP/assets/css/main/_variable.css);
 /*** 
 ====================================================================
 Main Header
