add pages about us contact us partner

--- a/css/flaticon.css
+++ b/css/flaticon.css
@@ -31,7 +31,7 @@ i[class^="flaticon-"]:before, i[class*=" flaticon-"]:before {
     content: "\f104";
 }
 .flaticon-business-trip:before {
-    content: "\f105";
+    content: "\F231";
 }
 .flaticon-insurance-1:before {
     content: "\f106";
