--- a/assets/css/main/footer.css
+++ b/assets/css/main/footer.css
@@ -66,7 +66,7 @@
     left: 0;
     top: 0;
     color: var(--theme-color2);
-    content: "/";
+    content: "|";
   }
   
   .main-footer .about-widget {
