--- a/assets/css/main/header.css
+++ b/assets/css/main/header.css
@@ -79,7 +79,7 @@ Main Header
   position: absolute;
   left: -3px;
   top: 0;
-  content: "/";
+  content: "|";
 }
 .header-top .useful-links li a {
   color: #808287;
